<resources>
    <string name="app_name">Zespół zaburzeń poznawczych</string>
    <string name="segment_A">Orientacja przestrzenna</string>
    <string name="segment_B">Interakcje społeczne</string>
    <string name="segment_C">Cykl sen-czuwanie</string>
    <string name="segment_D">Brudzenie w domu</string>
    <string name="segment_points">Stadium kliniczne</string>
    <string name="A_dezorienation">Dezorientacja w znajomym środowisku (w domu/na dworze)</string>
    <string name="A_people_humans">Nie rozpoznaje znajomych ludzi i zwierząt (w domu/na dworze)</string>
    <string name="A_known_items">Nietypowe zachowanie przy znanych przedmiotach (krześle, koszu na śmieci)</string>
    <string name="A_pointless_walking">Chodzenie bez celu (niepokój motoryczny) w ciągu dnia</string>
    <string name="A_skills">Pogorszenie wcześniej nabytych umiejętności</string>
    <string name="B_interactions">Zmiany w interakcjach z ludźmi lub psami (zabawa, pieszczoty, witanie)</string>
    <string name="B_behaviors">Zmiany w indywidualnych zachowaniach psa (zach. badawcze, zabawa, sprawność)</string>
    <string name="B_commands">Reakcje na polecenia i zdolność do wykonywania nowych zadań</string>
    <string name="B_irritation">Rozdrażnienie</string>
    <string name="B_aggression">Zachowania agresywne</string>
    <string name="C_night">Nietypowe zachowanie w nocy (wałęsanie się, wokalizacja, niepokój motoryczny)</string>
    <string name="C_sleeping">Naprzemienne zmiany w czasie snu od skrócenia do wydłużenia (insomnia-hypersomnia)</string>
    <string name="D_inside">Załatwia się w domu w przypadkowych miejscach</string>
    <string name="D_bed">Załatwia się w kojcu lub na posłaniu</string>
    <string name="D_signals">Zmiany w sygnalizowaniu potrzeby wyjścia na zewnątrz</string>
    <string name="D_walk">Załatwia się w domu niedługo po spacerze</string>
    <string name="D_uncommon">Wydalanie w nietypowych miejscach (trawa, beton)</string>
    <string name="Alert">Pamiętaj, aby skonsutlować wynik ze specjalistą!</string>
    <string name="points_normal">Normalne starzenie się (poniżej 8 punktów)</string>
    <string name="points_low">Delikatne upośledzenie czynności poznawczych (od 8 do 23 punktów)</string>
    <string name="points_average">Umiarkowane upośledzenie czynności poznawczych (od 24 do 44 punktów)</string>
    <string name="points_high">Poważne upośledzenie czynności poznawczych (od 45 do 95 punktów)</string>
    <string name="ans_never">Nigdy</string>
    <string name="ans_once_6_months">Minimum raz na pół roku</string>
    <string name="ans_once_month">Raz w miesiącu</string>
    <string name="ans_few_month">2 do 4 razy w miesiącu</string>
    <string name="ans_few_week">Kilka razy w tygodniu</string>
    <string name="result">Wynik</string>
    <string name="next">Następne</string>
    <string name="question_number">Pytanie </string>
    <string name="of"> z</string>
    <string name="question_of">Pytanie 1 z 17</string>
    <string name="dog_results">Ilość punktów (max. 95): </string>
    <string name="your_dog">Wynik Twojego psa to: </string>
    <string name="clinical_stadium">Stadium kliniczne</string>
    <string name="read_more">Przeczytaj więcej o CDS u psów</string>
    <string name="restart">Restart</string>
    <string name="quit">Zamknij</string>
    <string name="url">http://dogosfera.pl/tag/zaburzenia-zachowania-u-starych-psow/</string>
    <string name="info">Sprawdź czy Twój pies cierpi na Zespół Zaburzeń Poznawczych, chorobę dotykającą psy w starszym wieku.</string>
    <string name="instruction">Zaznacz częstotliwość występowanie zachowania.</string>
    <string name="back">Cofnij</string>
    <string name="tap_to_exit">Kliknij jeszcze raz, aby wyjść</string>
</resources>
