<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/your_dog"/>
    <TextView
        android:id="@+id/final_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="85" />
    <ProgressBar
        android:id="@+id/cds_bar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:progress="0"
        android:max="95"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clinical_stadium"/>
    <TextView
        android:id="@+id/score_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/points_normal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Alert"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:onClick="restart"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_more"
        android:onClick="readMore"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:onClick="quit"/>

</LinearLayout>