<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/standard_margin"
    tools:context="pl.skylos.cognitivedisfunctionsystem.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"/>
        <TextView
            android:id="@+id/segment"
            style="@style/segment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="A"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:id="@+id/segment_desc"
            style="@style/segment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/segment_A"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/A_dezorienation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction"/>

        <RadioGroup
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/ans1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ans_never" />

            <RadioButton
                android:id="@+id/ans2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ans_once_6_months" />

            <RadioButton
                android:id="@+id/ans3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ans_once_month" />

            <RadioButton
                android:id="@+id/ans4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ans_few_month" />

            <RadioButton
                android:id="@+id/ans5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ans_few_week" />
        </RadioGroup>
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="nextQuestion"
            android:text="@string/next" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="backPressed"
            android:text="@string/back" />
        <TextView
            android:id="@+id/question_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/question_of"/>
        <ProgressBar
            android:id="@+id/questions_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="17"
            android:progress="0" />
        <TextView
            android:id="@+id/cds_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dog_results"/>
        <ProgressBar
            android:id="@+id/cds_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="95"
            android:progress="0" />
    </LinearLayout>
</ScrollView>
